bug: 20395
Fixed the Error Msg. overflow issue. Here after you will see a scrollbar if the Error report is too long

http://bugzilla.zimbra.com/show_bug.cgi?id=20395

Copied from Perforce
 Change: 68100

--- a/WebRoot/css/dwt.css
+++ b/WebRoot/css/dwt.css
@@ -529,6 +529,7 @@
 	Class "Dwt[Dark|Light]InnerBorder" is also applied to this elements */
 .DwtDialogBody 	{
   cursor: default;
+  
 }
 
 
@@ -626,7 +627,9 @@
 /* Outer container for the message dialog */
 .DwtMsgDialog {
 	width: 400px;
+	overflow: auto;
 }
+
 
 /* Text area for the message dialog, including icon */
 .DwtMsgArea {
